fix dashboard container content from overflowing main container

--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,8 @@ picture {
 
 /* set up the body */
 body {
-  background-color: hsl(var(--clr-white));
+  /* background-color: hsl(var(--clr-white)); */
+  background-color: red;
   margin: 0;
   line-height: 1.5;
   min-height: 100vh;
