--- a/src/pages/ContactUsPage.css
+++ b/src/pages/ContactUsPage.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 98%;
-  height: 65%;
+  height: 65vh;
   margin: auto;
   border-radius: 2.375rem;
 }
