--- a/src/pages/DashBoardPage.css
+++ b/src/pages/DashBoardPage.css
@@ -3,3 +3,9 @@
   margin: 1.75rem 1rem 1.25rem 1.125rem;
   border: 1px #e9e9e9 solid;
 }
+
+@media screen and (min-width: 1200px) {
+  .dashboard_page_container {
+    overflow-y: scroll;
+  }
+}
