--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 98%;
-  height: 65%;
+  height: 65vh;
   margin: 0 auto;
   border-radius: 2.375rem;
 }
