--- a/src/pages/Root.css
+++ b/src/pages/Root.css
@@ -13,8 +13,17 @@
     width: 100%;
   }
   .root_secondary_container {
-    width: 77%;
-    min-height: 100%;
-    overflow: scroll;
+    width: 100%;
+    height: 100vh;
+  }
+
+  .outlet_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 98%;
+    height: 65vh;
+    margin: auto;
+    border-radius: 2.375rem;
   }
 }
